fix slight spacing inconsistency
Adding margin to the top-content div in phone size exposed more of the
banner image instead of showing padding.

Placing a background-color on .container makes it so adding margin to
the top nav at the phone breakpoint pushes the image down while exposing
more of .container's background (which is now opaque instead of
transparent).

This has the desired result.

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -172,7 +172,9 @@ section {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: lighten(@tipsease-dark-accent, 45%);
   @media @desktop {
+    border-radius: 18px 18px 0 0;
     margin: -21rem auto 0;
     max-width: calc(100% - 15rem);
     width: 120rem;
@@ -191,6 +193,12 @@ section {
   text-align: center;
   background-color: @tipsease-light-shades;
   color: @tipsease-dark-shades;
+
+  margin-top: 2rem;
+
+  @media @tablet {
+    margin-top: 0;
+  }
 
   @media @desktop {
     padding-top: 4.5rem;
@@ -418,8 +426,8 @@ footer {
 
     img {
       margin-top: 0px;
-      border-radius: 6px 6px 0 0;
       @media @desktop {
+        border-radius: 6px 6px 0 0;
         padding-top: 0;
       }
     }
